update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,7 +1,8 @@
 xpra (6.0.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     - avoid timeout on slow build platforms, when running pandoc, raise the timeout on arm and riscv
-    - tell dpkg to remove or upgrade `xpra-codecs` before `xpra-codecs-extra`
+    - tell dpkg to remove or upgrade `xpra-codecs` before `xpra-codecs-extra`, +fixups
+    - minimal installations missing dependency and unable to paint without OpenGL
     - version script needs to update `pyproject.toml`, do it
     - MS Windows client fails to start without `explorer.exe` running
   * Major:
@@ -9,6 +10,7 @@ xpra (6.0.1-1) UNRELEASED; urgency=low
     - OpenGL check failures on X11
     - OpenGL paint errors drawing the spinners, don't check for `glBegin` and `glEnd`
     - OpenGL check: re-use environment filtering
+    - Wayland UTF8 clipboard byte strings
     - scale during render if needed
     - smarter auto refresh encoding selection
     - `xpra configure features` not reloading correctly
@@ -17,11 +19,15 @@ xpra (6.0.1-1) UNRELEASED; urgency=low
     - client startup failures caused by `dbus`
     - use the dynamic speed and quality assigned for video encoders
     - really avoid scaling text, but don't discard the option
+    - proxy compression broken
   * Cosmetic / correctness:
+    - `sync-xvfb` requires cairo
+    - help video decoders with colorspace metadata, but don't use full range h264 yet
     - don't initialize UI twice when connecting from launcher
     - add `quic` connections to launcher
     - warnings when dropping packets during shutdown
     - system tray icon filename should be a string
+    - discord link had expired, again
     - clearer ssh error message
     - parsing of scaling values as percentages
     - also bump `__version_info__` automatically and the RPM spec file
@@ -31,8 +37,14 @@ xpra (6.0.1-1) UNRELEASED; urgency=low
     - wrong time unit shown in error message
     - add asbtract socket link to documentation
     - ensure OpenGL `zerocopy` flag is a boolean
+    - explicit return statement
+    - incorrect debug logging
+    - warn users about deprecated syntax
+    - pass strict type check, ie: [bandwidth-limit is a number
+    - codec self tests
+    - Gtk version tool should not require `pango` or `cairo`
 
- -- Antoine Martin <antoine@xpra.org>  Thu, 16 May 2024 10:59:36 +0700
+ -- Antoine Martin <antoine@xpra.org>  Wed, 22 May 2024 19:28:46 +0700
 
 xpra (6.0-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
