update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -10,6 +10,8 @@ xpra (5.0.9-1) UNRELEASED; urgency=low
    - more simple / reliable OpenGL pixel format attributes on MacOS
    - MS Windows usernames should also be using strings
    - Cython compilation warnings
+   - CI: build test with Python 3.6 and 3.12
+   - missing explicit `cairo` dependency
   * Major:
    - handle downscaled video correctly without OpenGL
    - Gtk crashes on exit
@@ -23,6 +25,10 @@ xpra (5.0.9-1) UNRELEASED; urgency=low
    - libyuv converter cannot scale `YUV444P`
    - ffmpeg decoder can accept images with dimensions rounded down to a multiple of 2, same for swscale
    - audio source plugins not found
+   - client startup failures caused by `dbus`
+   - updated `run_scaled` script
+   - use the dynamic speed and quality assigned for video encoders
+   - proxy compression broken
   * Minor:
    - fix parsing of scaling values as percentages
    - fix ssl unit test, use SSL specific error codes
@@ -33,6 +39,9 @@ xpra (5.0.9-1) UNRELEASED; urgency=low
    - never try to start a display in `proxy` or `shadow` modes
    - do verify that the display is available in `monitor` mode
    - prevent audio DoS in the future
+   - help video decodes with colorspace metadata
+   - handle decoding of full-range YUV
+   - `sync-xvfb` requires cairo
   * Cosmetic:
    - clearer audio error message
    - clearer ssh error message
@@ -50,8 +59,12 @@ xpra (5.0.9-1) UNRELEASED; urgency=low
    - ignore 'noabstract' v6 bind option
    - fix unit tests: enable previously broken tests, faulty backport
    - downgrade Wayland warning
+   - explicit return statement
+   - warn users about deprecated syntax
+   - discord link had expired
+   - codec self tests, skip tests without sample data
 
- -- Antoine Martin <antoine@xpra.org>  Mon, 06 May 2024 22:14:32 +0700
+ -- Antoine Martin <antoine@xpra.org>  Fri, 24 May 2024 14:34:04 +0700
 
 xpra (5.0.8-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
