--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -12,6 +12,7 @@ xpra (5.0.9-1) UNRELEASED; urgency=low
    - Cython compilation warnings
    - CI: build test with Python 3.6 and 3.12
    - missing explicit `cairo` dependency
+   - RPM revision number missing
   * Major:
    - handle downscaled video correctly without OpenGL
    - Gtk crashes on exit
