--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.0.2-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Tue, 28 May 2024 22:39:39 +0700
+
 xpra (6.0.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     - avoid timeout on slow build platforms, when running pandoc, raise the timeout on arm and riscv
