update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,17 +1,40 @@
-v3.1.8 (2024-03-29)
+v3.1.8 (2024-06-13)
 	-- major:
 		- better compatibility with python2 servers
+		- missed clipboard synchronization events
+		- try to cleanup OpenGL context more correctly
+		- content type guess mismatch due to types
+		- crashes on clipboard backend cleanup
+		- bug report hangs when closing
+		- missing cairo dependency for non-OpenGL renderer
 	-- build and packaging:
-		- centos 7 uses a vendored name for lsb_release
-		- centos 7 build fix
-		- Cython 3.x warnings
+		- CentOS 7 uses a vendored name for lsb_release
+		- CentOS 7 build fix
+		- libvpx 1.14.1, libwebp 1.4.0
+		- Cython 3.x warnings, exception value warnings
 		- Debian build scripts need `wget` for the outdated python packages workarounds
+		- missing crypto libraries in MacOS builds
 	-- encodings:
 		- ensure NV12 encoded streams are decoded the same as YUV420P
+		- ignore alpha channel when requested
+		- tolerate video dimensions rounded down to nearest multiple of 2
+		- smarter auto refresh encoding selection
+		- include color range metadata in h264 stream
+		- handle full range colorspace conversion
 	-- minor and cosmetic fixes:
+		- support scaling specifed as a percentage
 		- shadow servers: missing attributes should raise a AttributeError
 		- vpx: set the correct (unused) pixel format constant
-		- unused import
+		- unused import, typos
+		- build `modifications` attribute is a number
+		- case insensitive window role matching
+		- `konsole` is a text application
+		- missing constant
+		- downgrade unavoidable Wayland keyboard warning
+		- stricter default and return types
+		- decode usernames on MS Windows
+		- don't enable `sync-xvfb` without cairo
+
 
 v3.1.7 (2024-03-17)
 	-- major fixes:
