--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.0.10-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Wed, 03 Jul 2024 15:20:53 +0700
+
 xpra (5.0.9-1) UNRELEASED; urgency=low
   * Encodings:
    - video encoding errors causing missed screen updates
