--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.0.11-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Tue, 09 Jul 2024 01:03:38 +0700
+
 xpra (5.0.10-1) UNRELEASED; urgency=low
   * TODO
 
