--- a/src/NEWS
+++ b/src/NEWS
@@ -7,6 +7,11 @@ v3.1.8 (2024-06-13)
 		- crashes on clipboard backend cleanup
 		- bug report hangs when closing
 		- missing cairo dependency for non-OpenGL renderer
+		- honour `ssh` switch when re-connecting
+		- MS Windows pdfium compatibility
+		- preserve the same interpreter with systemd-run wrapping
+		- ignore keyboard layouts without a valid X11 name
+		- mDNS sessions not grouped in mdns sessions gui tool
 	-- build and packaging:
 		- CentOS 7 uses a vendored name for lsb_release
 		- CentOS 7 build fix
@@ -14,6 +19,8 @@ v3.1.8 (2024-06-13)
 		- Cython 3.x warnings, exception value warnings
 		- Debian build scripts need `wget` for the outdated python packages workarounds
 		- missing crypto libraries in MacOS builds
+		- build CUDA kernels with clang instead of gcc 14+
+		- bundle openssh.cnf with MS Windows builds
 	-- encodings:
 		- ensure NV12 encoded streams are decoded the same as YUV420P
 		- ignore alpha channel when requested
@@ -21,7 +28,9 @@ v3.1.8 (2024-06-13)
 		- smarter auto refresh encoding selection
 		- include color range metadata in h264 stream
 		- handle full range colorspace conversion
+		- mmap overwrite race condition
 	-- minor and cosmetic fixes:
+		- connection errors with RFB mode and http socket upgrades
 		- support scaling specifed as a percentage
 		- shadow servers: missing attributes should raise a AttributeError
 		- vpx: set the correct (unused) pixel format constant
@@ -34,6 +43,8 @@ v3.1.8 (2024-06-13)
 		- stricter default and return types
 		- decode usernames on MS Windows
 		- don't enable `sync-xvfb` without cairo
+		- we have a test suite
+		- warn that paramiko is unmaintained
 
 
 v3.1.7 (2024-03-17)
