--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.0.3-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sat, 13 Jul 2024 11:44:07 +0700
+
 xpra (6.0.2-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     - revision number not detected in RPM spec file
