--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.2.0-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Thu, 18 Jul 2024 20:27:54 +0700
+
 xpra (6.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     RHEL 10 builds
