--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,7 +1,44 @@
 xpra (5.0.10-1) UNRELEASED; urgency=low
-  * TODO
+  * Encodings:
+   - `mmap` race condition
+   - validate openh264 colorspace
+   - test used potentially invalid colorspace
+  * Platforms, build and packaging:
+   - syntax compatibility fixes
+   - `openssl.cnf` location in MS Windows builds
+   - force rebuild of dummy driver RPMs
+   - Fedora can build html documentation again
+  * Major:
+   - MS Windows PDF printing crash, library mismatch
+   - honour `ssh` option when re-connecting
+   - missing http headers caused html5 client caching
+   - mDNS browser handling for binary `text` records from zeroconf
+   - `sync-xvfb`: always free images with an error context
+  * Encodings:
+   - avoid slow modules and slow encoders
+   - reduce how often quality swings cause scaling changes
+   - stick to the same video scaling value longer
+  * Keyboard:
+   - ignore MS Windows keyboard layouts without a valid X11 layout name
+   - try harder to identify the key event string
+   - don't show duplicate keyboard layout names
+  * Minor:
+   - remove enum prefix with older Python versions
+   - http directory listing
+   - ssl path checks
+   - RFB connections cannot be upgraded to `http` or `ws`
+   - make it possible to skip NM api
+  * Cosmetic:
+   - log `ssl` error just once per socket
+   - OpenSSH documentation misplaced
+   - we do have tests
+   - incorrect exception debug message
+   - paramiko looks unmaintained
+   - AES modes and keydata safety documentation
+   - missing line continuation backslash in example
+   - missing quote
 
- -- Antoine Martin <antoine@xpra.org>  Sat, 13 Jul 2024 11:46:24 +0700
+ -- Antoine Martin <antoine@xpra.org>  Wed, 24 Jul 2024 16:51:00 +0700
 
 xpra (5.0.9-1) UNRELEASED; urgency=low
   * Encodings:
