--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -3,16 +3,21 @@ xpra (6.1.1-1) UNRELEASED; urgency=low
     RHEL 8.10 pygobject3 packaging update
     always build the latest X11 dummy driver version
     only build xpra from the 6.1.x branch
+    pycuda 2024.1.1
   * Encodings:
     disable `scroll` encoding
+    greenish tint with subsampled webp screen updates
   * Major:
     missing context manager when X11 session started from a Wayland desktop
+    keyboard support should not require `dbus`
   * Network:
     expose quic / webtransport sockets via mdns
   * Cosmetic:
     incorrect exception debug message
+    unused invalid headers
+    outdated comment
 
- -- Antoine Martin <antoine@xpra.org>  Mon, 22 Jul 2024 22:23:11 +0700
+ -- Antoine Martin <antoine@xpra.org>  Wed, 24 Jul 2024 19:06:03 +0700
 
 xpra (6.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
