update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -9,12 +9,14 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - force rebuild of dummy driver RPMs
    - Fedora can build html documentation again
    - MS Windows multi-page printing
+   - run CI builds with Python 3.6 and 3.12, this requires Ubuntu 20.04
   * Major:
    - MS Windows PDF printing crash, library mismatch
    - honour `ssh` option when re-connecting
    - missing http headers caused html5 client caching
    - mDNS browser handling for binary `text` records from zeroconf
    - `sync-xvfb`: always free images with an error context
+   - better compatibility with all builds of python cryptography
   * Encodings:
    - avoid slow modules and slow encoders
    - reduce how often quality swings cause scaling changes
@@ -30,6 +32,7 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - RFB connections cannot be upgraded to `http` or `ws`
    - make it possible to skip NM api
   * Cosmetic:
+   - validate application's opaque-region
    - slow CI test times out, ignore it
    - only import modules actually needed: notifications, windows, mmap
    - `desktop-scaling=no` parsing warnings
@@ -42,7 +45,7 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - missing line continuation backslash in example
    - missing quote
 
- -- Antoine Martin <antoine@xpra.org>  Sat, 27 Jul 2024 19:47:27 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 30 Jul 2024 19:07:51 +0700
 
 xpra (5.0.9-1) UNRELEASED; urgency=low
   * Encodings:
