--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -3,7 +3,7 @@ xpra (6.1.1-1) UNRELEASED; urgency=low
     RHEL 8.10 pygobject3 packaging update
     always build the latest X11 dummy driver version
     only build xpra from the 6.1.x branch
-    pycuda 2024.1.1
+    pycuda 2024.1.2
     MS Windows multi-page printing
     MS Windows console detection
   * Encodings:
@@ -18,6 +18,7 @@ xpra (6.1.1-1) UNRELEASED; urgency=low
     expose quic / webtransport sockets via mdns
     `gss` authentication module parsing error
     better compatibility with all builds of python cryptography
+    read ssh subcommand's stderr
   * Cosmetic / preventive:
     validate application's opaque-region property
     slow CI test times out, ignore failures
@@ -29,8 +30,9 @@ xpra (6.1.1-1) UNRELEASED; urgency=low
     incorrect exception debug message
     unused invalid headers
     outdated comment
+    debug logging shows function
 
- -- Antoine Martin <antoine@xpra.org>  Tue, 30 Jul 2024 18:38:45 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 30 Jul 2024 22:02:26 +0700
 
 xpra (6.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
