--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -8,9 +8,12 @@ xpra (6.1.1-1) UNRELEASED; urgency=low
     MS Windows console detection
   * Encodings:
     fix `scroll` encoding
-    greenish tint with subsampled webp screen updates
     rgb colors are always full range
     Pillow encoder quality is lower
+  * OpenGL:
+    greenish tint with subsampled webp screen updates
+    uninitialized pixels when resizing OpenGL windows
+    visual corruption with pointer overlay
   * Major:
     missing context manager when X11 session started from a Wayland desktop
     keyboard support should not require `dbus`
@@ -28,6 +31,8 @@ xpra (6.1.1-1) UNRELEASED; urgency=low
     better compatibility with all builds of python cryptography
     read ssh subcommand's stderr
   * Cosmetic / preventive:
+    missing debug paint color for 'avif'
+    AT-SPI warnings
     slow CI test times out, ignore failures
     CI only test oldest and newest python versions
     don't run sonarqube on this branch
@@ -44,7 +49,7 @@ xpra (6.1.1-1) UNRELEASED; urgency=low
     try to prevent ATK warnings
     log opengl probe command
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 04 Aug 2024 13:07:01 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 06 Aug 2024 17:01:21 +0700
 
 xpra (6.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
