update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,8 +1,4 @@
 xpra (5.0.10-1) UNRELEASED; urgency=low
-  * Encodings:
-   - `mmap` race condition
-   - validate openh264 colorspace
-   - test used potentially invalid colorspace
   * Platforms, build and packaging:
    - syntax compatibility fixes
    - `openssl.cnf` location in MS Windows builds
@@ -18,7 +14,12 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - mDNS browser handling for binary `text` records from zeroconf
    - `sync-xvfb`: always free images with an error context
    - better compatibility with all builds of python cryptography
+   - uninitialized pixels when resizing windows
+   - window border offset with non-opengl renderer
   * Encodings:
+   - `mmap` race condition
+   - validate openh264 colorspace
+   - test used potentially invalid colorspace
    - avoid slow modules and slow encoders
    - reduce how often quality swings cause scaling changes
    - stick to the same video scaling value longer
@@ -26,7 +27,7 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - ignore MS Windows keyboard layouts without a valid X11 layout name
    - try harder to identify the key event string
    - don't show duplicate keyboard layout names
-   - try harder to find a matching key by name
+   - try harder to find a matching key by name, try lowercase if needed, use default modifiers if that's all we've got
   * Minor:
    - remove enum prefix with older Python versions
    - http directory listing
@@ -36,6 +37,7 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - handle empty ibus daemon command
    - handle invalid dbus-launch command
   * Cosmetic:
+   - errors when connections are closed as we process them
    - try to prevent ATK warnings
    - validate application's opaque-region
    - slow CI test times out, ignore it
@@ -51,7 +53,7 @@ xpra (5.0.10-1) UNRELEASED; urgency=low
    - missing quote
    - log opengl probe command
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 04 Aug 2024 18:04:29 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 06 Aug 2024 22:53:27 +0700
 
 xpra (5.0.9-1) UNRELEASED; urgency=low
   * Encodings:
