--- a/src/packaging/debian/xpra/changelog
+++ b/src/packaging/debian/xpra/changelog
@@ -1,3 +1,26 @@
+xpra (3.1.9-1) UNRELEASED; urgency=low
+  * build and packaging:
+   - libyuv 0.1878.20231004
+   - packaging updates for CentOS7: libyuv, skip pycuda
+   - python-netifaces missing gcc build dependency
+   - remove outdated numpy packaging workaround on MS Windows
+  * encodings:
+   - avoid slow modules (ie: csc_cython)
+   - stick to the same video scaling setting longer, avoid big swings
+  * major:
+   - try harder to find the matching key, using the keyval, key name - lowercase if needed, use default modifiers if that's all we have
+   - context errors with sync-xvfb switch
+   - print all pages on MS Windows
+   - errors when the connection is closed whilst we process it
+  * minor and cosmetic fixes:
+   - handle invalid dbus-launch command options
+   - try to prevent all ATK warnings
+   - prevent ssl header from messing up the log
+   - try to handle missing python pillow slightly more gracefully
+   - log opengl probe command
+
+ -- Antoine Martin <antoine@nagafix.co.uk>  Wed, 06 Aug 2024 12:33:51 +0700
+
 xpra (3.1.8-1) UNRELEASED; urgency=low
   * major:
    - better compatibility with python2 servers
