--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.1.2-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sat, 10 Aug 2024 23:07:11 +0700
+
 xpra (6.1.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     RHEL 8.10 pygobject3 packaging update
