--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -4,6 +4,7 @@ xpra (6.1.2-1) UNRELEASED; urgency=low
     build pycuda against the system boost library if possible
     avoid `dnf` v5
   * Major:
+    system tray docking causing server crashes
     client errors out with window forwarding disabled, remove more assumptions
     OpenGL probe results were being ignored
     shape client errors with desktop scaling
@@ -16,7 +17,10 @@ xpra (6.1.2-1) UNRELEASED; urgency=low
     system tray not updated
   * Minor:
     `dev-env` subcommand fails on Debian
-     always set a default initial resolution
+    always set a default initial resolution
+    system tray setup failures with non-composited screens, ie: 8-bit displays
+    system tray paint failures with `mmap`
+   map missing modifiers using defaults
   * Encodings:
     sub-optimal non-scroll areas
     prettier sampling filter when downscaling
@@ -32,7 +36,7 @@ xpra (6.1.2-1) UNRELEASED; urgency=low
     skip scary warning without compression
     log full backtraces with X11 context errors
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 18 Aug 2024 18:23:04 +0700
+ -- Antoine Martin <antoine@xpra.org>  Fri, 23 Aug 2024 12:14:48 +0700
 
 xpra (6.1.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
